<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@id/btn_skip"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/padding_extra_large_20"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:hint="@string/full_name"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fullname"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:hint="@string/email"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_email"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:hint="@string/phone_no"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_number"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:hint="@string/username"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5" />

        <EditText
            android:id="@+id/retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5" />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/retype_password"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:background="@drawable/ripple_effect"
            android:gravity="center_horizontal"
            android:text="@string/create_account"
            android:textColor="@color/white" />


        <LinearLayout
            android:id="@+id/layout_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_account"
            android:layout_marginTop="@dimen/padding_too_large_30"
            android:background="@drawable/ripple_effect_transparentbg"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/already_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_small_5"
                android:text="@string/already_member"
                android:textColor="@color/txt_color" />

            <TextView
                android:id="@+id/signin_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>