<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/padding_normal_8dp"
            android:layout_marginTop="@dimen/padding_normal_8dp"
            android:background="@drawable/ripple_effect_transparentbg"
            android:text="@string/skip"
            android:textColor="@color/txt_color" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@id/btn_skip"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/padding_extra_large_20"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:hint="@string/phone_no"
            android:maxLines="1"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_number"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:hint="@string/password"
            android:maxLines="1"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:singleLine="true" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:background="@drawable/ripple_effect"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/padding_extra_large_20"
            android:layout_marginRight="@dimen/padding_extra_large_20"
            android:layout_marginTop="@dimen/padding_medium_10dp"
            android:background="@drawable/ripple_effect_transparentbg"
            android:text="@string/forgot_password"
            android:textColor="@color/green_light" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/padding_extra_large_20"
            android:layout_marginTop="@dimen/padding_too_large_30"
            android:text="@string/or" />


        <LinearLayout
            android:id="@+id/layout_signup_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/or"
            android:layout_marginTop="@dimen/padding_too_large_30"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_small_5"
                android:text="@string/new_user"
                android:textColor="@color/txt_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect_transparentbg"
                android:text="@string/signup_here"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>