<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_50"
        android:text="@string/create_new_password"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_size_18"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginLeft="@dimen/padding_too_large_30"
        android:layout_marginRight="@dimen/padding_too_large_30"
        android:layout_marginTop="@dimen/padding_50"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_small_5"
        android:paddingTop="@dimen/padding_small_5" />

    <EditText
        android:id="@+id/retype_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="@dimen/padding_too_large_30"
        android:layout_marginRight="@dimen/padding_too_large_30"
        android:layout_marginTop="@dimen/padding_extra_large_20"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_small_5"
        android:paddingTop="@dimen/padding_small_5" />

    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/retype_password"
        android:layout_marginLeft="@dimen/padding_too_large_30"
        android:layout_marginRight="@dimen/padding_too_large_30"
        android:layout_marginTop="@dimen/padding_extra_large_20"
        android:background="@drawable/ripple_effect"
        android:gravity="center_horizontal"
        android:text="@string/submit"
        android:textColor="@color/white" />


</LinearLayout>