<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/rounder_corner_black"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_small_5"
        android:paddingTop="@dimen/padding_small_5"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_size_extra_large_15"
        android:textStyle="normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/padding_small_5"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_transparentbg"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_transparentbg"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_skip_signinup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_transparentbg"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:text="@string/skipinup"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_18"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>